force-app/main/default/objects/LostResult__c/LostResult__c.object-meta.xml
<CustomObject>
    <label>Lost Result</label>
    <nameField>
        <displayFormat>LT-{000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lost Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>