force-app/main/default/objects/LostResult__c/fields/LOST_DETAIL__c.field-meta.xml
<CustomField>
    <fullName>LOST_DETAIL__c</fullName>
    <label>LOST DETAIL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>