force-app/main/default/objects/LostResult__c/fields/LostActivity__c.field-meta.xml
<CustomField>
    <fullName>LostActivity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Activity</label>
    <referenceTo>Opportunity_Activity__c</referenceTo>
    <relationshipLabel>Lost Results</relationshipLabel>
    <relationshipName>Lost_Manage_Competition_Results</relationshipName>
    <type>Lookup</type>
</CustomField>