force-app/main/default/objects/LostResult__c/fields/LostTypeCode__c.field-meta.xml
<CustomField>
    <fullName>LostTypeCode__c</fullName>
    <label>Lost Type Code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>