force-app/main/default/objects/LostResult__c/fields/MasterLosttype_Eng__c.field-meta.xml
<CustomField>
    <fullName>MasterLosttype_Eng__c</fullName>
    <label>MasterLosttype_Eng</label>
    <length>100</length>
    <type>Text</type>
</CustomField>