force-app/main/default/objects/LostResult__c/fields/MasterLosttype_Kor__c.field-meta.xml
<CustomField>
    <fullName>MasterLosttype_Kor__c</fullName>
    <label>MasterLosttype_Kor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>