force-app/main/default/objects/LostResult__c/fields/Prediction_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Prediction_Strategy__c</fullName>
    <label>Pre-competition Prediction and Strategy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>