force-app/main/default/objects/LostResult__c/fields/Rate__c.field-meta.xml
<CustomField>
    <fullName>Rate__c</fullName>
    <label>Rate(%)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>