force-app/main/default/objects/LostResult__c/fields/Results_Bidding__c.field-meta.xml
<CustomField>
    <fullName>Results_Bidding__c</fullName>
    <label>Results after Bidding</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>