force-app/main/default/objects/LostResult__c/listViews/New.listView-meta.xml
<ListView>
    <fullName>New</fullName>
    <columns>NAME</columns>
    <columns>LostTypeCode__c</columns>
    <columns>MasterLosttype_Eng__c</columns>
    <columns>MasterLosttype_Kor__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Rate__c</columns>
    <columns>IsCheck__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>